Лаб 4/tests/semantic_errors/error4_unknown_function.listlang
result = unknown_function();
write(result);